// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends "_focused" to className if hasFocus is true 1`] = `
<div
  className="root"
>
  <button
    aria-describedby="e21adf19-eade-4643-974a-4c5b83f2c452"
    className="root_focused trigger"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "--venia-swatch-bg": "123,123,123",
      }
    }
    title="red"
  />
</div>
`;

exports[`appends "_selected" to className if isSelected is true 1`] = `
<div
  className="root"
>
  <button
    aria-describedby="fa80c816-16fb-4dd4-b7e6-d63f5bda5146"
    className="root_selected trigger"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "--venia-swatch-bg": "123,123,123",
      }
    }
    title="red"
  >
    <span
      className="root"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders a Swatch correctly 1`] = `
<div
  className="root"
>
  <button
    aria-describedby="cc9caa9f-e145-490c-9597-2c56a9195217"
    className="root trigger"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "--venia-swatch-bg": "123,123,123",
      }
    }
    title="red"
  />
</div>
`;

exports[`renders an icon if isSelected is true 1`] = `
<div
  className="root"
>
  <button
    aria-describedby="8b6a114c-b22e-4f8e-89a8-301b0c6d1fc2"
    className="root_selected trigger"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    style={
      Object {
        "--venia-swatch-bg": "123,123,123",
      }
    }
    title="red"
  >
    <span
      className="root"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </span>
  </button>
</div>
`;
